--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -24,8 +24,11 @@ modules:
   - type: rpm-ostree
     repos: # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
-      # - micro
-      # - starship
+      - intel-gpu-tools
+      - intel-media-driver
+      - libi2c-devel
+      - libva-utils
+      - vdpauinfo
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
