add podman compose

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -29,6 +29,7 @@ modules:
       - libi2c-devel
       - libva-utils
       - vdpauinfo
+      - podman-compose
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
