--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -39,7 +39,7 @@ modules:
       # - justfiles
         # add "!include /usr/share/ublue-os/just/100-bling.just"
         # in your custom.just (added by default) or local justfile
-      - nix-installer # shell shortcuts for determinate system's nix installers
+      # - nix-installer # shell shortcuts for determinate system's nix installers
       - ublue-os-wallpapers
       # - ublue-update # https://github.com/ublue-os/ublue-update
       # - 1password # install 1Password (stable) and `op` CLI tool
